--- a/app/particle/particle.css
+++ b/app/particle/particle.css
@@ -20,7 +20,6 @@
 	opacity: 0.75;
 }
 
-
 .particle-splash {
 	transform: translate(-50%, -100%) scale(var(--particleScale, 1));
 	transform-origin: bottom center;
@@ -33,9 +32,34 @@
 	--animation-steps: 7;
 	--animation-width: 32px;
 
-	animation: particle-animate steps(var(--animation-steps)) 1 calc(140ms * var(--particleScale, 1));
+	animation: particle-animate steps(var(--animation-steps)) 1 forwards calc(240ms * var(--particleScale, 1));
 }
 
+.particle-rock {
+	width: 23px;
+	height: 23px;
+
+	animation: particle-x-fall ease-out 1 calc(1ms * var(--fallSpeed)) forwards;
+}
+
+.particle-rock:after {
+	content: ' ';
+	display: block;
+	transform-origin: bottom center;
+	background-image: url(/Sonic/rocks-split.png);
+	width: 23px;
+	height: 23px;
+
+	--sprite-offset-x: 0px;
+	--sprite-offset-y: 0px;
+	--animation-steps: 4;
+	--animation-width: 23px;
+50
+	transform: translate(0, calc(-1px * var(--yMomentum)));
+
+	animation: particle-y-fall ease-in 1 calc(1ms * var(--fallSpeed)) forwards, particle-animate steps(var(--animation-steps)) infinite 512ms;
+
+}
 
 @keyframes particle-animate {
 	from{
@@ -43,5 +67,24 @@
 	}
 	to{
 		background-position: calc(calc(calc(-1 * var(--animation-steps)) * var(--animation-width)) + var(--sprite-offset-x)) var(--sprite-offset-y);
+	}
+}
+
+@keyframes particle-x-fall {
+	from{
+		transform: translate(0px, 0);
+	}
+	to{
+		transform: translate(calc(50vh + calc(-1px * var(--xMomentum))), 0);
+	}
+}
+
+
+@keyframes particle-y-fall {
+	from{
+		transform: translate(0, calc(-1px * var(--yMomentum)));
+	}
+	to{
+		transform: translate(0, 100vh);
 	}
 }
