--- a/app/particle/particle.css
+++ b/app/particle/particle.css
@@ -3,6 +3,7 @@
 	left: calc(1px * var(--x));
 	top: calc(1px * var(--y));
 	transform: translate(-50%, -50%);
+	filter:url(#motionBlur);
 }
 
 .particle-dust {
@@ -85,6 +86,6 @@
 		transform: translate(0, calc(-1px * var(--yMomentum)));
 	}
 	to{
-		transform: translate(0, 100vh);
+		transform: translate(0, 50vh);
 	}
 }
