--- a/app/viewport/viewport.css
+++ b/app/viewport/viewport.css
@@ -394,6 +394,11 @@ span.arrow-west {
 	--time: 30ms;
 }
 
+.topLine > .status-message {
+	top: 1em;
+	bottom: auto;
+}
+
 .status-message .hud-character {
 	background-color: rgb(0,0,0,0.5);
 	animation: sine 1.5s ease-in-out infinite;
