Basic light dash physics.

--- a/app/actor/super-ring.css
+++ b/app/actor/super-ring.css
@@ -1,3 +1,7 @@
+.point-actor.actor-super-ring {
+	pointer-events: none;
+}
+
 .point-actor.actor-super-ring .sprite {
 	/*background: black;*/
 	z-index: 2;
