--- a/app/actor/region.css
+++ b/app/actor/region.css
@@ -9,7 +9,7 @@
 }
 
 .region.region-water .region-color,
-.region.region-water .region-filter,
+.region.region-water .region-color-wrapper,
 .region.region-water .region-filter-wrapper,
 .region.region-water .sprite {
 	position: absolute;
@@ -25,79 +25,79 @@
 	z-index: 1001;
 }
 
-.region.region-water .region-filter-wrapper {
-	overflow: hidden;
-	background-color: rgba(0,128,255,0.25);
+.region.region-water .region-color-wrapper {
+	/*filter: hue-rotate(90deg);*/
 }
 
 .region.region-water .region-color {
 	bottom: 0px;
 	z-index: 10001;
-	display: none;
 	background-color: rgba(0,128,255,0.5);
+	opacity: 0.75;
 }
 
 .region.region-water .region-filter {
-	background-color: rgba(0,128,255,0.25);
 	transform: translateY(-2px);
 	position: absolute;
 	left:    calc(var(--leftBoundry) + 32px);
 	top:     calc(var(--topBoundry) - 0px);
 	width:   calc(var(--viewportWidth));
 	height:  calc(var(--viewportHeight) + 128px);
-	backdrop-filter: saturate(0.5);
-	filter: url(#waves);
-	opacity: 1;
 
+	left:    0;
+	top:     0;
+	width: calc(1px * var(--width));
+	height: calc(calc(1px * var(--height)) + 128px);
+
+	backdrop-filter: saturate(0.25);
+	filter: url(#waves) blur(0.3px);
+	background-blend-mode: darken;
+	z-index: -10000;
 	/*animation: water-distort infinite 3s alternate ease-in-out;*/
+
+	transform: translate3d(0, 0, 0);
 }
 
 .region.region-water .sprite:after {
 	content: '.';
 	color: transparent;
-	background-image: url(Sonic/water-surface.png);
-	background-repeat: repeat-x;
+	background-image: url(Sonic/water-surface-wave.png);
 	position: absolute;
-	transform: translateY(-10px);
+	transform: translateY(-16px);
 	opacity: 1;
 	width: 100%;
 	opacity: 0.333;
-	height: 10px;
-	filter: darken;
+	height: 16px;
 
-	animation: water-waves infinite linear 1250ms,
-		water-waves-shift infinite linear 750ms;
+	background-position: 0px 0px;
+
+	/*animation: water-waves 10000ms steps(1,end) infinite;*/
+	/*background-position-x: 0px;*/
+	/*background-position-y: 32px;*/
+	animation-name: water-waves-frames;
+	animation-timing-function: steps(3);
+	animation-iteration-count: infinite;
+	animation-duration: 0.5s;
 }
 
-@keyframes water-waves {
+@keyframes water-waves-frames {
 	0% {
-		background-position-y: 7px;
-	}
-	50% {
 		background-position-y: 0px;
+		/*transform: rotate(0deg);*/
 	}
 	100% {
-		background-position-y: 7px;
+		background-position-y: 48px;
+		/*transform: rotate(180deg);*/
 	}
 }
 
-
-@keyframes water-waves-shift {
-	from{
+@keyframes water-waves-flow {
+	0% {
 		background-position-x: 0px;
+		/*transform: rotate(0deg);*/
 	}
-	to {
-		background-position-x: 64px;
-	}
-}
-
-@keyframes water-distort {
-	from{
-		top:     calc(var(--topBoundry) - 0px);
-		/*transform: translateY(0px);*/
-	}
-	to{
-		top:     calc(var(--topBoundry) + 0px);
-		/*transform: translateY(-32px);*/
+	100% {
+		background-position-x: 100%;
+		/*transform: rotate(180deg);*/
 	}
 }
