--- a/docs/app.css
+++ b/docs/app.css
@@ -1212,6 +1212,7 @@
 
 .actor-powerup-glow .sprite .powerup-icon {
 	position: absolute;
+	mix-blend-mode: hue;
 	transform: translate(-50%, 25%);
 	left: 50%;
 	top: 50%;
@@ -1235,9 +1236,8 @@
 	transform-origin: bottom;
 	transform: perspective(50em) rotateX(-55deg) scale(0.667, 1);
 	animation: powerup-glow-scroll linear infinite 10s forwards;
-	mix-blend-mode: hue;
 	/*background-blend-mode: lighten;*/
-	opacity: 0.5;
+	opacity: 1;
 	filter: blur(2.5px);
 	transition:
 		transform 0.25s 0.75s ease-out
@@ -1321,7 +1321,7 @@
 }
 
 .region.region-water .region-color,
-.region.region-water .region-filter,
+.region.region-water .region-color-wrapper,
 .region.region-water .region-filter-wrapper,
 .region.region-water .sprite {
 	position: absolute;
@@ -1337,80 +1337,80 @@
 	z-index: 1001;
 }
 
-.region.region-water .region-filter-wrapper {
-	overflow: hidden;
-	background-color: rgba(0,128,255,0.25);
+.region.region-water .region-color-wrapper {
+	/*filter: hue-rotate(90deg);*/
 }
 
 .region.region-water .region-color {
 	bottom: 0px;
 	z-index: 10001;
-	display: none;
 	background-color: rgba(0,128,255,0.5);
+	opacity: 0.75;
 }
 
 .region.region-water .region-filter {
-	background-color: rgba(0,128,255,0.25);
 	transform: translateY(-2px);
 	position: absolute;
 	left:    calc(var(--leftBoundry) + 32px);
 	top:     calc(var(--topBoundry) - 0px);
 	width:   calc(var(--viewportWidth));
 	height:  calc(var(--viewportHeight) + 128px);
-	backdrop-filter: saturate(0.5);
-	filter: url(#waves);
-	opacity: 1;
 
+	left:    0;
+	top:     0;
+	width: calc(1px * var(--width));
+	height: calc(calc(1px * var(--height)) + 128px);
+
+	backdrop-filter: saturate(0.25);
+	filter: url(#waves) blur(0.3px);
+	background-blend-mode: darken;
+	z-index: -10000;
 	/*animation: water-distort infinite 3s alternate ease-in-out;*/
+
+	transform: translate3d(0, 0, 0);
 }
 
 .region.region-water .sprite:after {
 	content: '.';
 	color: transparent;
-	background-image: url(Sonic/water-surface.png);
-	background-repeat: repeat-x;
+	background-image: url(Sonic/water-surface-wave.png);
 	position: absolute;
-	transform: translateY(-10px);
+	transform: translateY(-16px);
 	opacity: 1;
 	width: 100%;
 	opacity: 0.333;
-	height: 10px;
-	filter: darken;
+	height: 16px;
 
-	animation: water-waves infinite linear 1250ms,
-		water-waves-shift infinite linear 750ms;
+	background-position: 0px 0px;
+
+	/*animation: water-waves 10000ms steps(1,end) infinite;*/
+	/*background-position-x: 0px;*/
+	/*background-position-y: 32px;*/
+	animation-name: water-waves-frames;
+	animation-timing-function: steps(3);
+	animation-iteration-count: infinite;
+	animation-duration: 0.5s;
 }
 
-@keyframes water-waves {
+@keyframes water-waves-frames {
 	0% {
-		background-position-y: 7px;
-	}
-	50% {
 		background-position-y: 0px;
+		/*transform: rotate(0deg);*/
 	}
 	100% {
-		background-position-y: 7px;
+		background-position-y: 48px;
+		/*transform: rotate(180deg);*/
 	}
 }
 
-
-@keyframes water-waves-shift {
-	from{
+@keyframes water-waves-flow {
+	0% {
 		background-position-x: 0px;
+		/*transform: rotate(0deg);*/
 	}
-	to {
-		background-position-x: 64px;
-	}
-}
-
-@keyframes water-distort {
-	from{
-		top:     calc(var(--topBoundry) - 0px);
-		/*transform: translateY(0px);*/
-	}
-	to{
-		top:     calc(var(--topBoundry) + 0px);
-		/*transform: translateY(-32px);*/
+	100% {
+		background-position-x: 100%;
+		/*transform: rotate(180deg);*/
 	}
 }
 
@@ -2236,6 +2236,226 @@ h1 {
 	--animation-width: 32px;
 
 	animation: particle-animate steps(var(--animation-steps)) 1 forwards calc(240ms * var(--particleScale, 1));
+}
+
+.region.region-shade .hud-character-string {
+	position: absolute;
+	right: 1em;
+	top: 1em;
+
+	--scale: 1 !important;
+}
+
+.region.region-shade .hud-character-string:not(:empty) {
+	animation-name: shade-title-flicker;
+	animation-timing-function: steps(3);
+	animation-iteration-count: 3;
+	animation-duration: 0.333s;
+}
+
+.region.region-shade .region-color,
+.region.region-shade .region-color-wrapper,
+.region.region-shade .region-filter,
+.region.region-shade .region-filter-wrapper,
+.region.region-shade .sprite {
+	position: absolute;
+	width: calc(1px * var(--width));
+	height: calc(1px * var(--height));
+	/*pointer-events: none;*/
+	z-index: 100;
+}
+
+.region.region-shade .region-color,
+.region.region-shade .region-color-wrapper,
+.region.region-shade .region-filter,
+.region.region-shade .region-filter-wrapper {
+	overflow: hidden;
+}
+
+.region.region-shade .region-color-wrapper,
+.region.region-shade .sprite {
+	top: calc(1px + calc(-1px * var(--height)));
+	left: -16px;
+	background-attachment: fixed;
+}
+
+.region.region-shade .region-filter {
+	position: absolute;
+
+	left:    0;
+	top:     0;
+	width:   calc(var(--viewportWidth));
+	height:  calc(var(--viewportHeight) + 128px);
+}
+
+.region.region-shade .region-color-wrapper {
+	/*opacity: 0.5;*/
+	/*backdrop-filter: url(#waves);
+	filter: url(#waves);*/
+
+}
+
+.region.region-shade .region-color {
+
+}
+
+.region.region-shade .region-filter-wrapper {
+
+}
+
+.region.region-shade .region-filter {
+	/*opacity: 1;*/
+
+	/*
+	*/
+
+	/*backdrop-filter: blur(0px);*/
+	/*filter:  blur(0px) url(#waves) drop-shadow(0px 0px 0px red);*/
+
+	/*filter:  blur(0px) drop-shadow(0px 0px 0px black);*/
+
+	/*filter: url(#waves);*/
+
+
+	/*backdrop-filter: grayscale(100%) invert(1);*/
+
+	/*
+	filter: url(#waves);
+	backdrop-filter: url(#waves);
+	*/
+}
+
+.region.region-shade.studio .region-color-wrapper {
+	background-color: white;
+	opacity: 0.5;
+	mix-blend-mode: exclusion;
+}
+
+.region.region-shade.water .region-filter {
+	filter: invert(0.5);
+}
+
+
+
+
+.region.region-shade.runners .region-color-wrapper {
+	mix-blend-mode: darken;
+	opacity: 0;
+}
+
+.region.region-shade.runners .region-filter {
+	backdrop-filter:
+		drop-shadow(1px 1px 0.125px black)
+		drop-shadow(-1px 1px 0.125px black)
+		drop-shadow(1px -1px 0.125px black)
+		drop-shadow(-1px -1px 0.125px black)
+	;
+}
+
+
+.region.region-shade.old-west .region-filter {
+	backdrop-filter: sepia(0.85) brightness(0.75) contrast(1.5);
+}
+
+
+
+.region.region-shade.water .region-color-wrapper {
+
+}
+
+.region.region-shade.water .region-color {
+	background-color: rgba(0,128,255,0.25);
+}
+
+.region.region-shade.water .region-filter {
+	backdrop-filter: blur(0.5px);
+	filter: url(#waves);
+}
+
+.region.region-shade.water .sprite:after {
+	content: ' ';
+	background-image: url(Sonic/water-surface-wave.png);
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+
+	transform: translateY(-10px);
+
+	opacity: 0.5;
+
+	height: 16px;
+	width: 100%;
+
+	z-index: 10000;
+
+	animation-name: water-waves-frames, water-waves-flow;
+	animation-timing-function: steps(3), linear;
+	animation-iteration-count: infinite, infinite;
+	animation-duration: 1.15s, 9s;
+}
+
+.region.region-shade.heat .region-color-wrapper {
+	background-color: rgba(255,255,255,0.0);
+	mix-blend-mode: lighten;
+}
+
+.region.region-shade.heat .region-color {
+}
+
+.region.region-shade.heat .region-filter {
+	filter: brightness(4) url(#waves) blur(0.5px) url(#waves) contrast(1) sepia(0.25);
+	backdrop-filter:
+		drop-shadow(0px -0.25px  0.5px rgba(255, 255,  32, 0.333))
+		drop-shadow(0px -0.50px  0.5px  rgba(255, 64,  32, 0.25))
+		drop-shadow(0px -1.25px  1.00px rgba(128, 0,   0,  0.5))
+		drop-shadow(0px -1.50px  1.50px rgba(0,   0,   0,  0.5))
+		opacity(0.5);
+}
+
+.region.region-shade.eight-bit .region-color-wrapper {
+	mix-blend-mode: darken;
+}
+
+.region.region-shade.eight-bit .region-color {
+}
+
+.region.region-shade.eight-bit  .region-filter {
+	filter: saturate(1) brightness(1.25) contrast(3);
+	backdrop-filter:
+		drop-shadow(1px 1px 0.125px rgba(0,0,0,0.75))
+		drop-shadow(-1px 1px 0.125px rgba(0,0,0,0.75))
+		drop-shadow(1px -1px 0.125px rgba(0,0,0,0.75))
+		drop-shadow(-1px -1px 0.125px rgba(0,0,0,0.75))
+	;
+}
+
+.region.region-shade.corruption .region-color-wrapper {
+	mix-blend-mode: screen;
+}
+
+.region.region-shade.corruption .region-color {
+}
+
+.region.region-shade.corruption .region-filter {
+	filter: brightness(1.25) hue-rotate(-45deg) invert(1) brightness(0.75) contrast(1.25);
+	backdrop-filter:
+		drop-shadow(1px 1px 1px rgba(255,255,255,0.5))
+		drop-shadow(0px 0px 2px rgba(0,0,0,0.75))
+	;
+}
+
+@keyframes shade-title-flicker {
+	0% {
+		opacity: 1;
+	}
+	50% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
 }
 
 .titlecard,
