--- a/docs/app.css
+++ b/docs/app.css
@@ -2240,17 +2240,19 @@ h1 {
 
 .region.region-shade .hud-character-string {
 	position: absolute;
-	right: 1em;
-	top: 1em;
+	left: 50%;
+	bottom: -1.25em;
 
-	--scale: 1 !important;
+	transform: translateX(-50%);
+
+	--scale: 0.75 !important;
 }
 
 .region.region-shade .hud-character-string:not(:empty) {
 	animation-name: shade-title-flicker;
 	animation-timing-function: steps(3);
-	animation-iteration-count: 3;
-	animation-duration: 0.333s;
+	animation-iteration-count: 5;
+	animation-duration: 0.151515s;
 }
 
 .region.region-shade .region-color,
@@ -2288,54 +2290,14 @@ h1 {
 	height:  calc(var(--viewportHeight) + 128px);
 }
 
-.region.region-shade .region-color-wrapper {
-	/*opacity: 0.5;*/
-	/*backdrop-filter: url(#waves);
-	filter: url(#waves);*/
-
-}
-
-.region.region-shade .region-color {
-
-}
-
-.region.region-shade .region-filter-wrapper {
-
-}
-
-.region.region-shade .region-filter {
-	/*opacity: 1;*/
-
-	/*
-	*/
-
-	/*backdrop-filter: blur(0px);*/
-	/*filter:  blur(0px) url(#waves) drop-shadow(0px 0px 0px red);*/
-
-	/*filter:  blur(0px) drop-shadow(0px 0px 0px black);*/
-
-	/*filter: url(#waves);*/
-
-
-	/*backdrop-filter: grayscale(100%) invert(1);*/
-
-	/*
-	filter: url(#waves);
-	backdrop-filter: url(#waves);
-	*/
-}
-
 .region.region-shade.studio .region-color-wrapper {
-	background-color: white;
 	opacity: 0.5;
+	background-color: rgba(255,255,255,1);
 	mix-blend-mode: exclusion;
 }
 
-.region.region-shade.water .region-filter {
-	filter: invert(0.5);
+.region.region-shade.studio .region-filter-wrapper {
 }
-
-
 
 
 .region.region-shade.runners .region-color-wrapper {
@@ -2353,42 +2315,49 @@ h1 {
 }
 
 
-.region.region-shade.old-west .region-filter {
+.region.region-shade.western .region-filter {
 	backdrop-filter: sepia(0.85) brightness(0.75) contrast(1.5);
 }
 
-
-
-.region.region-shade.water .region-color-wrapper {
-
-}
-
-.region.region-shade.water .region-color {
+.region.region-shade.hydro .region-color {
 	background-color: rgba(0,128,255,0.25);
 }
 
-.region.region-shade.water .region-filter {
+.region.region-shade.hydro .region-filter {
 	backdrop-filter: blur(0.5px);
 	filter: url(#waves);
 }
 
-.region.region-shade.water .sprite:after {
+.region.region-shade.hydro .sprite:before {
 	content: ' ';
-	background-image: url(Sonic/water-surface-wave.png);
 	position: absolute;
 	top: 0;
 	left: 0;
 	bottom: 0;
 	right: 0;
 
-	transform: translateY(-10px);
+	transform: translateY(-16px);
+	background: rgba(0,0,0,0);
+}
+
+.region.region-shade.hydro .sprite:after {
+	content: ' ';
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+
+	background-image: url(Sonic/water-surface-wave.png);
+
+	transform: translateY(-16px);
 
 	opacity: 0.5;
 
 	height: 16px;
 	width: 100%;
 
-	z-index: 10000;
+	z-index: 100;
 
 	animation-name: water-waves-frames, water-waves-flow;
 	animation-timing-function: steps(3), linear;
@@ -2421,7 +2390,7 @@ h1 {
 .region.region-shade.eight-bit .region-color {
 }
 
-.region.region-shade.eight-bit  .region-filter {
+.region.region-shade.eight-bit .region-filter {
 	filter: saturate(1) brightness(1.25) contrast(3);
 	backdrop-filter:
 		drop-shadow(1px 1px 0.125px rgba(0,0,0,0.75))
@@ -2438,12 +2407,29 @@ h1 {
 .region.region-shade.corruption .region-color {
 }
 
+.region.region-shade.corruption .region-filter-wrapper {
+}
+
 .region.region-shade.corruption .region-filter {
-	filter: brightness(1.25) hue-rotate(-45deg) invert(1) brightness(0.75) contrast(1.25);
+
+	opacity: 0.85;
+
+	filter:
+		brightness(1.25)
+		hue-rotate(-45deg)
+		invert(1)
+		brightness(1.25)
+		contrast(1.75);
+
 	backdrop-filter:
 		drop-shadow(1px 1px 1px rgba(255,255,255,0.5))
-		drop-shadow(0px 0px 2px rgba(0,0,0,0.75))
-	;
+		drop-shadow(0px 0px 2px rgba(0,0,0,0.75));
+
+}
+
+.region.region-shade.black-hole .region-filter-wrapper {
+	backdrop-filter: blur(0px);
+ 	filter: url(#shade-pinch);
 }
 
 @keyframes shade-title-flicker {
